<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="2dp"
    android:padding="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AA5500BB"
        android:orientation="horizontal"
        android:padding="1dp">

        <ImageView
            android:id="@+id/im_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_photo"
            tools:srcCompat="@drawable/a001" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:hint="@string/second_name_hint" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>